<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2011, Mark L. Chang <mark.chang@gmail.com>. All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are
  ~ permitted provided that the following conditions are met:
  ~
  ~    1. Redistributions of source code must retain the above copyright notice, this list of
  ~       conditions and the following disclaimer.
  ~
  ~    2. Redistributions in binary form must reproduce the above copyright notice, this list
  ~       of conditions and the following disclaimer in the documentation and/or other
  ~       materials provided with the distribution.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY Mark L. Chang ``AS IS'' AND ANY EXPRESS OR IMPLIED
  ~ WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
  ~ FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL MARK L. CHANG OR
  ~ CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
  ~ CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
  ~ NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
  ~ ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  ~
  ~ The views and conclusions contained in the software and documentation are those of the
  ~ authors and should not be interpreted as representing official policies, either expressed
  ~ or implied, of Mark L. Chang.
  -->

<resources>
    <string name="app_name">Andgram2</string>
    <string name="app_header">Andgram2</string>

    <string name="main_menu_credentials">Credentials</string>
    <string name="main_menu_refresh">Refresh</string>
    <string name="main_menu_preferences">Preferences</string>
    <string name="main_menu_clear">Clear</string>

    <string name="comment">Comment</string>
    <string name="feed">Feed</string>
    <string name="popular">Popular</string>
    <string name="userfeed">Your feed</string>
    <string name="image_detail">Image Details</string>
    <string name="empty">empty</string>

    <string name="dashboard">Dashboard</string>
    <string name="login">Login</string>

    <string name="login_button">Login to Instagram</string>

    <string name="no_registration_disclaimer">
        This application does not support the creation of new Instagram accounts.
        That portion of the undocumented API has not yet been reverse-engineered.
        You will need to use an iOS device (such as an iPhone) in order to create
        an account.
    </string>

    <string name="oauth_login_description">
        When you click on the button below, you will be taken to the Instagram
        web site to log in. You will be asked to authorize Andgram2 to access
        Instagram on your behalf. This way, we do not store your username or
        password.
    </string>

</resources>
